<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">atmconsultoria@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_servicos">Serviços</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sobre">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sistema_de_gestão_de_qualidade">Sistema de gestão de qualidade.</string>
    <string name="texto_qualidade">Qualidade é uma responsabilidade de todos os niveis da organização. Ao implementar um sistema  de gestão da qualidade, a empresa se prepara melhor para gerenciar os riscos relacionados a qualidade. Existem varias normas e padrões para medir a qualidade, como a ISO 9001, ISO 14001, ISO 18001, ISO 31000, certificação ONA e outras.</string>
    <string name="indicadores_de_desempenho">Indicadores de desempenho.</string>
    <string name="texto_indicadores_de_desempenho">A definição e analise de indicadores permitem avaliar o desempenho da organização de acordo com as metas estabelecidas, posibilitando o seu acompanhamento e permetindo que sejam feitas as adequaçõesnecessarias para atingir os resultados desejados.</string>
    <string name="texto_sobre">A ATM consultoria tem como missão apoiar as organizações que desejam alcançar o sucesso atraves da excelencia em gestão e da busca  pela qualidade.</string>
</resources>
