<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_principal_preto_24dp"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/ic_servico_preto_24dp"
            android:title="@string/menu_servicos" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_cliente_preto_24dp"
            android:title="@string/menu_clientes" />
    </group>

    <item android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_contato_preto_24dp"
                android:title="@string/menu_contato" />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_sobre_preto_24dp"
                android:title="@string/menu_sobre" />
        </menu>
    </item>

</menu>
